--- a/test1/index.html
+++ b/test1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="box">
+    <div class="container">
       <div class="dropdown">
         <button
           type="button"
