--- a/test3/index.html
+++ b/test3/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>카드 맞추기</h1>
-      <span class="timer" id="timer">00:00</span>
+      <div class="controller">
+        <span class="timer" id="timer">00:00</span>
+        <button id="startButton">시작하기</button>
+      </div>
       <div id="cardWrapper" class="cardWrapper"></div>
-      <button id="startButton">시작하기</button>
     </div>
 
     <script>
@@ -19,87 +20,103 @@
       const startButton = document.querySelector('#startButton');
       const timerDisplay = document.querySelector('#timer');
 
+      // init data
       const total = 16;
       const emojis = ['😄', '🐶', '🌸', '⭐', '🍎', '🎵', '🚗', '🎲'];
-      let emojiCopy = emojis.concat(emojis);
-
       let shuffled = [];
       let clicked = [];
       let completed = [];
       let clickable;
       let timer;
       let elapsedSeconds = 0;
+      let isStart = true;
 
+      // 카드를 랜덤으로 섞는 함수
       function shuffle() {
-        for (let i = 0; emojiCopy.length > 0; i += 1) {
-          const randomIndex = Math.floor(Math.random() * emojiCopy.length);
-          shuffled = shuffled.concat(emojiCopy.splice(randomIndex, 1));
+        const emojiCopy = emojis.concat(emojis);
+        for (let i = emojiCopy.length - 1; i > 0; i--) {
+          const randomIndex = Math.floor(Math.random() * (i + 1));
+          [emojiCopy[i], emojiCopy[randomIndex]] = [
+            emojiCopy[randomIndex],
+            emojiCopy[i],
+          ];
         }
+        shuffled = emojiCopy;
       }
 
+      // 카드 생성 함수
       function createCard(i) {
         const card = document.createElement('div');
         card.className = 'card';
-        const cardInner = document.createElement('div');
-        cardInner.className = 'card-inner';
-        const cardFront = document.createElement('div');
-        cardFront.className = 'card-front';
-        const cardBack = document.createElement('div');
-        cardBack.className = 'card-back';
-        const emoji = document.createElement('p');
-        emoji.className = 'emoji';
-        emoji.textContent = shuffled[i];
-        cardBack.appendChild(emoji);
-        cardInner.appendChild(cardFront);
-        cardInner.appendChild(cardBack);
-        card.appendChild(cardInner);
+        card.innerHTML = `
+         <div class="card-inner">
+             <div class="card-front"></div>
+             <div class="card-back">
+                 <p class="emoji">${shuffled[i]}</p>
+             </div>
+        </div>
+        `;
         return card;
       }
 
+      // 카드를 클릭했을 때 함수
       function onClickCard(event) {
         if (!clickable) return;
-        const card = event.target.closest('.card');
-        if (card.classList.contains('flipped')) return;
-        card.classList.toggle('flipped');
-        clicked.push(card);
-        if (clicked.length !== 2) {
-          return;
-        }
-        clickable = false;
 
-        const firstEmoji = clicked[0].querySelector('.card-back p').textContent;
-        const secondEmoji =
-          clicked[1].querySelector('.card-back p').textContent;
+        const card = event.target.closest('.card');
+
+        if (!card || card.classList.contains('flipped')) return;
+
+        flipCard(card);
+
+        if (clicked.length === 2) {
+          checkMatch();
+        }
+      }
+
+      function flipCard(card) {
+        card.classList.add('flipped');
+        clicked.push(card);
+      }
+
+      function checkMatch() {
+        clickable = false;
+        const [first, second] = clicked;
+        const firstEmoji = first.querySelector('.card-back p').textContent;
+        const secondEmoji = second.querySelector('.card-back p').textContent;
 
         if (firstEmoji === secondEmoji) {
-          completed.push(...clicked.splice(0, 2));
-          clickable = true;
-
-          if (completed.length === total) {
-            clearInterval(timer);
-            timer = 0;
-          }
-          return;
+          completeMatch();
+        } else {
+          unflipCards();
         }
+      }
+
+      function completeMatch() {
+        completed.push(...clicked);
+        clicked = [];
+        clickable = true;
+
+        if (completed.length === total) {
+          clearInterval(timer);
+          timer = null;
+        }
+      }
+
+      function unflipCards() {
         setTimeout(() => {
-          clicked[0].classList.remove('flipped');
-          clicked[1].classList.remove('flipped');
+          clicked.forEach((card) => card.classList.remove('flipped'));
           clicked = [];
           clickable = true;
         }, 1000);
       }
 
       function resetGame() {
-        clearInterval(timer);
-        timer = null;
-        timerDisplay.textContent = '00:00';
-        elapsedSeconds = 0;
-        clickable = false;
+        resetTimer();
         clicked = [];
         completed = [];
         wrapper.innerHTML = '';
         cardSetting();
-        startButton.textContent = '다시하기';
         startGame();
       }
 
@@ -115,39 +132,39 @@
         }
       }
 
-      async function flipAndStartGame() {
-        // 1. 카드들을 1초 간격으로 뒤집기
+      async function startGame() {
+        clickable = false;
         await new Promise((resolve) => {
           document.querySelectorAll('.card').forEach((card, index) => {
             setTimeout(() => {
               card.classList.add('flipped');
               if (index === document.querySelectorAll('.card').length - 1) {
-                resolve(); // 마지막 카드까지 뒤집었으면 resolve 호출
+                resolve();
               }
             }, 1000 + 100 * index);
           });
         });
 
-        // 2. 5초 후에 카드들의 flipped 클래스를 제거하고 타이머 시작
         setTimeout(() => {
-          if (timer) clearInterval(timer);
           document.querySelectorAll('.card').forEach((card) => {
             card.classList.remove('flipped');
           });
           clickable = true;
-
+          startButton.disabled = false;
+          startButton.textContent = '다시하기';
           startTimer();
         }, 3000);
       }
 
-      function startGame() {
-        clickable = false;
-        flipAndStartGame(); // 비동기적으로 처리되는 부분
+      function resetTimer() {
+        clearInterval(timer);
+        timer = null;
+        elapsedSeconds = 0;
+        timerDisplay.textContent = '00:00';
       }
 
       function startTimer() {
-        elapsedSeconds = 0;
-        timerDisplay.textContent = '00:00';
+        resetTimer();
 
         timer = setInterval(() => {
           elapsedSeconds += 1;
@@ -163,10 +180,14 @@
       cardSetting();
 
       startButton.addEventListener('click', () => {
-        if (startButton.textContent === '시작하기') {
+        if (isStart) {
+          isStart = false;
+          startButton.textContent = '기다려라..누르지마';
+          startButton.disabled = true;
           startGame();
-          startButton.textContent = '다시하기';
         } else {
+          startButton.textContent = '기다려라..누르지마';
+          startButton.disabled = true;
           resetGame();
         }
       });
