feat: 카드게임 완료

--- a/test3/index.html
+++ b/test3/index.html
@@ -182,11 +182,11 @@
       startButton.addEventListener('click', () => {
         if (isStart) {
           isStart = false;
-          startButton.textContent = '기다려라..누르지마';
+          startButton.textContent = '게임 준비 중..';
           startButton.disabled = true;
           startGame();
         } else {
-          startButton.textContent = '기다려라..누르지마';
+          startButton.textContent = '게임 준비 중..';
           startButton.disabled = true;
           resetGame();
         }
