--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <a href="./test1/index.html">1번 문제</a>
     <a href="./test2/index.html">2번 문제</a>
+    <a href="./test3/index.html">3번 문제</a>
   </body>
 </html>
