--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>onflou Development Challenge</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>
-      onflou <br />
-      Development <br />
-      Challenge
-    </h1>
-    <a href="./test1/index.html">1번 문제</a>
-    <a href="./test2/index.html">2번 문제</a>
-    <a href="./test3/index.html">3번 문제</a>
+    <div class="container">
+      <h1 class="title">
+        <span class="accent">onflou</span><br />
+        Development<br />
+        Challenge
+      </h1>
+      <div class="link-wrapper">
+        <a class="link" href="./test1/index.html">1번 문제</a> |
+        <a class="link" href="./test2/index.html">2번 문제</a> |
+        <a class="link" href="./test3/index.html">3번 문제</a> |
+        <a class="link" href="./test4/index.html">4번 문제</a>
+      </div>
+      <a
+        class="link"
+        href="https://winter-cloud-a31.notion.site/105fd395e7ae80bdb02cfab44f76eeaf?pvs=4"
+        >이대양 이력서 보러 가기</a
+      >
+    </div>
   </body>
 </html>
