--- a/test2/index.html
+++ b/test2/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Card</title>
+    <title>Profile Card - onflou Development Challenge</title>
+    <link rel="stylesheet" href="../reset.css" />
+    <link rel="stylesheet" href="../header.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <header class="gnb">
+      <div class="gnb-left"><a href="../index.html">메인</a></div>
+      <div class="gnb-right">
+        <a href="../test1/index.html">1번 문제</a> |
+        <a class="current-page" href="../test2/index.html">2번 문제</a> |
+        <a href="../test3/index.html">3번 문제</a> |
+        <a href="../test4/index.html">4번 문제</a>
+      </div>
+    </header>
     <div class="container" id="cardContainer"></div>
   </body>
   <script src="./profileCard.js" defer></script>
