feat: 폰트 그냥 빼고 완성!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>onflou Development Challenge</title>
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,7 +22,7 @@
       </div>
       <a
         class="link"
-        href="https://winter-cloud-a31.notion.site/105fd395e7ae80bdb02cfab44f76eeaf?pvs=4"
+        href="https://winter-cloud-a31.notion.site/14dfd395e7ae80238e8fee829ff04770?pvs=4"
         >이대양 이력서 보러 가기</a
       >
     </div>
