--- a/test3/index.html
+++ b/test3/index.html
@@ -33,7 +33,10 @@
     <div class="container">
       <div class="controller">
         <span class="timer" id="timer">00:00</span>
-        <button id="startButton">시작하기</button>
+        <div class="btn-wrapper">
+          <button id="startButton">시작하기</button>
+          <span class="round" id="round">Round:0</span>
+        </div>
       </div>
       <div id="cardWrapper" class="card-wrapper"></div>
     </div>
